# swagger/swagger.yml
@@ -987,55 +987,55 @@ paths:
         "500":
           description: '{"code": 500,"message": "Error sql"}'
 definitions:
-  6752.0xc0006133e0.false:
+  6752.0xc0005dd5c0.false:
     title: "false"
     type: object
-  6808.0xc000613410.false:
+  6808.0xc0005dd5f0.false:
     title: "false"
     type: object
-  9396.0xc000613440.false:
+  9396.0xc0005dd620.false:
     title: "false"
     type: object
-  9476.0xc000613470.false:
+  9476.0xc0005dd650.false:
     title: "false"
     type: object
-  9536.0xc0006134a0.false:
+  9536.0xc0005dd680.false:
     title: "false"
     type: object
-  9605.0xc0006134d0.false:
+  9605.0xc0005dd6b0.false:
     title: "false"
     type: object
-  9974.0xc000613500.false:
+  9974.0xc0005dd6e0.false:
     title: "false"
     type: object
-  10067.0xc000613530.false:
+  10067.0xc0005dd710.false:
     title: "false"
     type: object
-  11051.0xc000613560.false:
+  11051.0xc0005dd740.false:
     title: "false"
     type: object
-  12974.0xc000613590.false:
+  12974.0xc0005dd770.false:
     title: "false"
     type: object
-  13039.0xc0006135c0.false:
+  13039.0xc0005dd7a0.false:
     title: "false"
     type: object
-  13107.0xc0006135f0.false:
+  13107.0xc0005dd7d0.false:
     title: "false"
     type: object
-  13342.0xc000613620.false:
+  13342.0xc0005dd800.false:
     title: "false"
     type: object
-  13399.0xc000613650.false:
+  13399.0xc0005dd830.false:
     title: "false"
     type: object
-  13455.0xc000613680.false:
+  13455.0xc0005dd860.false:
     title: "false"
     type: object
-  29939.0xc00063d7a0.false:
+  29942.0xc0005fb980.false:
     title: "false"
     type: object
-  33034.0xc0006461b0.false:
+  33037.0xc000606390.false:
     title: "false"
     type: object
   global.APIGetResponse:
@@ -1826,8 +1826,6 @@ definitions:
         type: string
       FotoKartuIdentitas:
         type: string
-      FotoRumah1:
-        type: string
       FotoSuketDomisili:
         type: string
       FrekuensiPembiayaan:
@@ -1968,8 +1966,6 @@ definitions:
         type: string
       PendapatanKotor_perHari_Suami:
         type: string
-      PendidikanAnak:
-        type: string
       PengeluaranKel_perHari:
         type: string
       PengeluaranKel_perHari_Suami:
@@ -2049,7 +2045,7 @@ definitions:
       Angsuran_Per_Minggu:
         type: string
       ClientID:
-        $ref: '#/definitions/33034.0xc0006461b0.false'
+        $ref: '#/definitions/33037.0xc000606390.false'
       ID_Prospek:
         type: string
       Jasa:
@@ -2139,7 +2135,7 @@ definitions:
       ID_Prospek:
         type: string
       Status_Kelayakan:
-        $ref: '#/definitions/29939.0xc00063d7a0.false'
+        $ref: '#/definitions/29942.0xc0005fb980.false'
   models.SP_GET_SIKLUS_NASABAH_BRNET:
     title: SP_GET_SIKLUS_NASABAH_BRNET
     type: object
@@ -2221,11 +2217,11 @@ definitions:
       ID_Sumber:
         type: string
       Is_Ada_Rekening_Bank:
-        $ref: '#/definitions/9396.0xc000613440.false'
+        $ref: '#/definitions/9396.0xc0005dd620.false'
       Is_AdaAdaToiletPribadi:
-        $ref: '#/definitions/10067.0xc000613530.false'
+        $ref: '#/definitions/10067.0xc0005dd710.false'
       Is_AdaAksesAirBersih:
-        $ref: '#/definitions/9974.0xc000613500.false'
+        $ref: '#/definitions/9974.0xc0005dd6e0.false'
       Is_AdaPembiayaanLain:
         type: string
       Is_Ditempat:
@@ -2279,7 +2275,7 @@ definitions:
       Kecamatan:
         type: string
       Kelompok_ID:
-        $ref: '#/definitions/12974.0xc000613590.false'
+        $ref: '#/definitions/12974.0xc0005dd770.false'
       Kelurahan:
         type: string
       Kemampuan_Angsuran:
@@ -2295,17 +2291,17 @@ definitions:
       Lantai:
         type: string
       Latitude:
-        $ref: '#/definitions/6752.0xc0006133e0.false'
+        $ref: '#/definitions/6752.0xc0005dd5c0.false'
       Lokasi_Sos:
         type: string
       Longitude:
-        $ref: '#/definitions/6808.0xc000613410.false'
+        $ref: '#/definitions/6808.0xc0005dd5f0.false'
       Luas_Bangunan:
         type: string
       Nama_Ayah:
         type: string
       Nama_Bank:
-        $ref: '#/definitions/9476.0xc000613470.false'
+        $ref: '#/definitions/9476.0xc0005dd650.false'
       Nama_Gadis_Ibu_Kandung:
         type: string
       Nama_KabKot:
@@ -2313,15 +2309,13 @@ definitions:
       Nama_Kecamatan:
         type: string
       Nama_Kelompok:
-        $ref: '#/definitions/13107.0xc0006135f0.false'
+        $ref: '#/definitions/13107.0xc0005dd7d0.false'
       Nama_KelurahanDesa:
         type: string
       Nama_Lengkap:
         type: string
       Nama_Pembiayaan_Lembaga_Lain:
-        $ref: '#/definitions/11051.0xc000613560.false'
-      Nama_Pendidikan:
-        type: string
+        $ref: '#/definitions/11051.0xc0005dd740.false'
       Nama_Penjamin:
         type: string
       Nama_Produk:
@@ -2345,7 +2339,7 @@ definitions:
       No_KK:
         type: string
       No_Rekening:
-        $ref: '#/definitions/9536.0xc0006134a0.false'
+        $ref: '#/definitions/9536.0xc0005dd680.false'
       No_Telp:
         type: string
       Nomor_Identitas:
@@ -2355,7 +2349,7 @@ definitions:
       Pekerjaan:
         type: string
       Pemilik_Rekening:
-        $ref: '#/definitions/9605.0xc0006134d0.false'
+        $ref: '#/definitions/9605.0xc0005dd6b0.false'
       PendapatanBersih_perBulan:
         type: string
       PendapatanBersih_perBulan_Suami:
@@ -2379,13 +2373,13 @@ definitions:
       PengeluaranKel_perHari_Suami:
         type: string
       PostStatus:
-        $ref: '#/definitions/13342.0xc000613620.false'
+        $ref: '#/definitions/13342.0xc0005dd800.false'
       Produk_Pembiayaan:
         type: string
       Provinsi:
         type: string
       Reason:
-        $ref: '#/definitions/13399.0xc000613650.false'
+        $ref: '#/definitions/13399.0xc0005dd830.false'
       Siklus:
         type: string
       Siklus_Pembiayaan:
@@ -2397,7 +2391,7 @@ definitions:
       StatusRumah:
         type: string
       Sub_Kelompok:
-        $ref: '#/definitions/13039.0xc0006135c0.false'
+        $ref: '#/definitions/13039.0xc0005dd7a0.false'
       TTD_AO:
         type: string
       TTD_KC_SAO:
@@ -2417,7 +2411,7 @@ definitions:
       Tanggal_Sos:
         type: string
       Tanggal_Verif:
-        $ref: '#/definitions/13455.0xc000613680.false'
+        $ref: '#/definitions/13455.0xc0005dd860.false'
       Tempat_Lahir:
         type: string
       Term_Pembiayaan:
